--- a/calculator.html
+++ b/calculator.html
@@ -4,66 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calculator</title>
-  <style>
-    body {
-      font-family: Arial, Helvetica, sans-serif;
-      background-color: black;
-      display: flex;
-      justify-content: center;
-      align-items: center; 
-      flex-direction: column;
-      height: 100vh;          
-      margin: 0; 
-    }
-    h2 {
-      text-align: center;
-      color: white;
-      margin-bottom: 25px;
-      margin-top: 15px;
-    }
-    .main {
-      background-color: #222;
-      border-radius: 15px;   
-      padding: 20px;      
-      color: white;
-      max-width: 275px;
-      width: 100%;
-    }
-    .container1,.container2,.container3,.container4,.resetContainer {
-      margin-bottom: 8px;
-    }
-    button {
-      font-size: 25px;
-      width: 60px;
-      height: 60px;
-      border-radius: 30px;
-      border: none;
-      background-color: rgb(51, 50, 50);
-      color: white;
-      margin-right: 5px;
-    }
-    button:hover {
-      background-color: #666;
-    }
-    .reset {
-      font-size: 18px;
-    }
-    .add,.sub,.multiply,.divide {
-      background-color: orange;
-    }
-    .add:hover,.sub:hover,.multiply:hover,.divide:hover{
-      background-color: rgb(255, 200, 0);
-    }
-    .screen {
-      height: 40px;
-      margin: 8px 2px 5px 8px;
-      font-size: 35px;
-      color: white;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h2>Arithmetic Calculator</h2>
